--- a/src/main.fxml
+++ b/src/main.fxml
@@ -14,9 +14,11 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Circle?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="433.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainWindowController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="611.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainWindowController">
   <columnConstraints>
     <ColumnConstraints />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -31,7 +33,7 @@
         <tabs>
           <Tab text="Clock">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="360.0" prefWidth="598.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="493.0" prefWidth="608.0">
                      <children>
                         <FlowPane columnHalignment="CENTER" layoutX="14.0" layoutY="15.0" orientation="VERTICAL" prefHeight="359.0" prefWidth="99.0" vgap="5.0">
                            <children>
@@ -53,7 +55,7 @@
                         <FlowPane alignment="CENTER_RIGHT" hgap="5.0" layoutX="386.0" layoutY="311.0" prefHeight="39.0" prefWidth="200.0" />
                         <Pane layoutX="119.0" prefHeight="378.0" prefWidth="482.0">
                            <children>
-                              <GridPane alignment="CENTER" layoutX="17.0" layoutY="13.0" prefHeight="369.0" prefWidth="465.0">
+                              <GridPane alignment="CENTER" layoutX="55.0" layoutY="23.0" prefHeight="332.0" prefWidth="373.0">
                                 <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -80,20 +82,21 @@
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <Circle fx:id="hour12" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" />
-                                    <Circle fx:id="hour1" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="7" GridPane.rowIndex="1" />
-                                    <Circle fx:id="hour2" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="8" GridPane.rowIndex="3" />
-                                    <Circle fx:id="hour3" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="9" GridPane.rowIndex="5" />
-                                    <Circle fx:id="hour4" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="8" GridPane.rowIndex="7" />
-                                    <Circle fx:id="hour5" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="7" GridPane.rowIndex="9" />
-                                    <Circle fx:id="hour6" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.rowIndex="10" />
-                                    <Circle fx:id="hour7" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="9" />
-                                    <Circle fx:id="hour8" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-                                    <Circle fx:id="hour9" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                                    <Circle fx:id="hour10" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                                    <Circle fx:id="hour11" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                                    <Circle fx:id="hour12" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" />
+                                    <Circle fx:id="hour1" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+                                    <Circle fx:id="hour2" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="8" GridPane.rowIndex="3" />
+                                    <Circle fx:id="hour3" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="9" GridPane.rowIndex="5" />
+                                    <Circle fx:id="hour4" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="8" GridPane.rowIndex="7" />
+                                    <Circle fx:id="hour5" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="7" GridPane.rowIndex="9" />
+                                    <Circle fx:id="hour6" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.rowIndex="10" />
+                                    <Circle fx:id="hour7" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="9" />
+                                    <Circle fx:id="hour8" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+                                    <Circle fx:id="hour9" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                    <Circle fx:id="hour10" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                                    <Circle fx:id="hour11" fill="DODGERBLUE" radius="15.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                                     <Circle fx:id="minute12" fill="#5eff1f" radius="11.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.rowIndex="1" />
                                     <Circle fx:id="minute1" fill="#5eff1f" radius="11.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="6" GridPane.rowIndex="2" />
                                     <Circle fx:id="minute11" fill="#64ff21" radius="11.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.rowIndex="2" />
@@ -106,6 +109,46 @@
                                     <Circle fx:id="minute6" fill="#5eff1f" radius="11.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.rowIndex="9" />
                                     <Circle fx:id="minute7" fill="#5eff1f" radius="11.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.rowIndex="8" />
                                     <Circle fx:id="minute8" fill="#5eff1f" radius="11.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+                                    <Circle fx:id="min1" radius="11.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="12">
+                                       <fill>
+                                          <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                                             <stops>
+                                                <Stop color="BLACK" />
+                                                <Stop color="WHITE" offset="1.0" />
+                                             </stops>
+                                          </RadialGradient>
+                                       </fill>
+                                    </Circle>
+                                    <Circle fx:id="min2" radius="11.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.rowIndex="12">
+                                       <fill>
+                                          <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                                             <stops>
+                                                <Stop color="BLACK" />
+                                                <Stop color="WHITE" offset="1.0" />
+                                             </stops>
+                                          </RadialGradient>
+                                       </fill>
+                                    </Circle>
+                                    <Circle fx:id="min3" radius="11.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="6" GridPane.rowIndex="12">
+                                       <fill>
+                                          <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                                             <stops>
+                                                <Stop color="BLACK" />
+                                                <Stop color="WHITE" offset="1.0" />
+                                             </stops>
+                                          </RadialGradient>
+                                       </fill>
+                                    </Circle>
+                                    <Circle fx:id="min4" radius="11.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="7" GridPane.rowIndex="12">
+                                       <fill>
+                                          <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                                             <stops>
+                                                <Stop color="BLACK" />
+                                                <Stop color="WHITE" offset="1.0" />
+                                             </stops>
+                                          </RadialGradient>
+                                       </fill>
+                                    </Circle>
                                  </children>
                               </GridPane>
                            </children>
